kuberenetes-yaml/deptest.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: fib 
  namespace: asaxena
  labels: 
    app: fib 
spec: 
  selector: 
    matchLabels: 
      app: fib 
  template: 
    metadata: 
      labels: 
        app: fib 
    spec: 
      containers: 
      - name: fib 
        image: errm/fib:latest 
        ports: 
        - containerPort: 9292 
        resources: 
          limits: 
            cpu: "250m" 
            memory: "32Mi"
