kuberenetes-yaml/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: asaxena
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.10
        ports:
        - containerPort: 80
        resources:
          # You must specify requests for CPU to autoscale
          #           # based on CPU utilization
          requests:
            cpu: "250m"
