kuberenetes-yaml/nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-nodeport
  namespace: asaxena
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-nodeport
  template:
    metadata:
      labels:
        app: hello-kubernetes-nodeport
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-nodeport
  namespace: asaxena
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-nodeport
