kuberenetes-yaml/sertest.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: fib
  namespace: asaxena  
spec: 
  selector: 
    app: fib 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 9292
