kuberenetes-yaml/tester.yaml
kind: Pod
apiVersion: v1
metadata:
  name: tester-page
  labels:
    app: tester
spec:
  containers:
    - name: tester-page
      image: hashicorp/http-echo
      args:
        - "-text=Hello Tester"

---

kind: Service
apiVersion: v1
metadata:
  name: tester-service
spec:
  selector:
    app: tester
  ports:
    - port: 5678
