kuberenetes-yaml/testlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-lb
  namespace: asaxena
spec:
  type: LoadBalancer
  externalIPs: 
    - 10.0.212.146
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-lb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-lb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-lb
  template:
    metadata:
      labels:
        app: hello-kubernetes-lb
        namespace: asaxena
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
