kuberenetes-yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /devloper
          backend:
            serviceName: devloper-service
            servicePort: 5678
        - path: /tester
          backend:
            serviceName: tester-service
            servicePort: 5678
